Example for matrix selection

--- a/docs/Protocol.Rmd
+++ b/docs/Protocol.Rmd
@@ -37,7 +37,7 @@ MatrixStartMonth,
 MatrixEndYear,
 MatrixEndSeason, or
 MatrixEndMonth.
-Typically one of these will be sufficient to uniquely identify a model within a study, but sometimes you may need a second (e.g., SpeciesAuthor and MatrixPolulation). To record this, choose the identifying field in **MatrixIDField** and record the value from the database in **MatrixIDvalue**. If you need a second field to uniquely identify the model, add it using **MatrixIDfield2** and **MatrixIDvalue2**.
+Typically one of these will be sufficient to uniquely identify a model within a study, but sometimes you may need a second (e.g., SpeciesAuthor and MatrixPolulation). To record this, choose the identifying field in **MatrixIDField** and record the value from the database in **MatrixIDvalue**. If you need a second field to uniquely identify the model, add it using **MatrixIDfield2** and **MatrixIDvalue2**. For example, @V_lez_Espino_2009 describe models for multiple populations (called "designatable units" in the paper); to select DU #1 (labeled "Western Hudson Bay" in Table 2), select `MatrixPopulation` for **MatrixIDField** and enter `Western Hudson Bay` in **MatrixIDvalue**. Always make sure to enter the value exactly as it is entered in the database (sometimes capitalization differs from the original paper).
 
 Notation: in the formulas referenced below, $i$ refers to a stage or age class, $U_i$, $F_i$ and $C_i$, are the element in the **U**, **F**, and **C** matrices, respectively, associated with class $i$; $m_i$ is the maternity of class $i$ (number of offspring produced by an individual who is in class $i$ at the moment of reproduction); $\sigma_i$ is the per-timestep survival rate of class $i$ individuals; $\gamma_i$ is the fraction of surviving class $i$ individuals who mature to the next class. $P_i = (1-\gamma_i) \sigma_i$ is the fraction of individuals who survive and stay in the same class (found along the diagonal of the matrix) and $G_i = \gamma_i \sigma_i$ is the fraction that survive and mature to the next class (on the subdiagonal). So it must be noted that $U_i$ comes in two flavours: $P_i$ (stasis) and $G_i$ (progression)
 
