Discussion of size class issues

--- a/docs/Outline.Rmd
+++ b/docs/Outline.Rmd
@@ -80,3 +80,7 @@ Revisiting prior results
 # Things to think about
 
 In section 5.3, "Age-specific traits from stage-specific models," Caswell (2001) presents methods for calculating quantities such as mean duration in a stage by calculating the fundamental matrix, **N**, from the transition matrix **T**. I suspect that these statistics will only be correct if the maturation rates are calculated with an assumption of $\lambda = 1$ in eq. (6.103). Thus, models built to get the correct asymptotic population growth rate will give incorrect age-specific statistics based on the fundamental matrix. One thing I'm not sure of is how much the latter is done; but I think that it is the basis also for the entropy calculations in Tulja's "dynamic heterogeneity."
+
+Size classes have a similar issue as stage classes. Just as, in many cases, an individual who has just entered a stage is less likely to mature than an individual who has been in the stage for a while (i.e., age within stage matters for stage class transitions), so too, in many cases, an individual who has a size near the lower edge of the size class is less likely to grow into a larger size class than one with a size close to the upper bound of the size class (i.e., size within the size class matters for size class transitions). When transition rates between classes is based on *observed* transitions (as is often the case, at least for plants), then the within-class size distribution is baked in, and anything that changes that size distribution (a recruitment pulse, or change in population growth rate) will lead to those transition estimates being biased. However, the dynamics of size within a size class are much more population-specific than the dynamics of age within a stage class, so there aren't the suite of general formulations available for the age-within-stage adjustments. If individual sizes are measured, prior to a post-hoc discretization into size classes, then an IPM becomes the gold standard, analogous to the unrolled stage classes. Having constructed an IPM, then the size distribution could be discretized with transitions calculated appropriate to various goals (asymptototic population growth rate, size at age distributions, etc.), but that regression seems silly (note that this is what Morris & Doak do in their *Hudsonia* example, but their calculations retain the observed size structure). If only data on size categories are collected in the field, then it *might* be possible to estimate an underlying continuous growth function (especially if individuals are measured through multiple timesteps, so that residence time within the class can be estimated)---again, this would be best use to construct an IPM directly, but might also be regressed to a matrix model.
+
+For the current paper, this would at best be a discussion item; and it might well be that these issues are already addressed in the papers introducing IPMs and pointing out the problems with size class selection.
