Better language for Mid and Flow models; add instruction to note discrepancies between described life history and model

--- a/docs/Protocol.Rmd
+++ b/docs/Protocol.Rmd
@@ -75,10 +75,12 @@ There are six possible responses, with most studies falling into the first three
     b. The class into which the youngest class matures **next** is unambiguously one timestep old (e.g., "yearling" for a model with an annual timestep). 
     c. The description of the reproduction term explicitly describes a full timestep of survival by the parent.
 3. **Post+**: The yougest class in the matrix is a small fraction of a timestep old (e.g., "fledglings"), and the next class is unambiguously a full timestep old.
-4. **Mid**: The youngest class in the matrix is approximately half a timestep old, and subsequent classes likewise have non-integer ages (1.5, etc.). This is unusual enough that it will probably be explicitly described in the model description; other evidence includes explicit treatment of half-timestep survival in the reproduction terms.
-5. **Flow**: The model is representing a continuously breeding life history ("birth-flow"). Again, this is unusual, and methods taken to discretize the continuous breeding should be prominent in the model description.
+4. **Mid**: The youngest class in the matrix is approximately half a timestep old, and subsequent classes likewise have non-integer ages (1.5, etc.). This is unusual enough that it will probably be explicitly described in the model description; other evidence includes explicit treatment of half-timestep survival in the reproduction and survival terms (see, for example, eqs. 2.39 and 2.42 in Caswell 2001).
+5. **Flow**: The model is representing a continuously breeding life history ("birth-flow"). Again, this is unusual, and methods taken to discretize the continuous breeding should be prominent in the model description. Derivation of survival and fertility should broadly follow section 2.4.1 of @Caswell2001, and will again include a mix of survival values from adjacent age classes.
 6. **Ambiguous**: In some cases, the youngest class has a name suggesting a range of ages (e.g., "Age 0-1"). Unless the model is a birth-flow population, this nomenclature is *not* meant to represent a class with a range of ages, but rather represents a lack of understanding by the authors that the class is supposed to represent a snapshot in time, rather than the ages spanned by a timestep. If it is possible to determine the census type using other information, choose the appropriate option above; if not, choose this option.
 6. **Unknown**: The census type cannot be determined from the information in the publication, for reasons other than the ambiguity in the previous option.
+
+If you notice a discrepancy between the described life history and the model [e.g., the species is described as continuously breeding but the matrix is for a birth-pulse model, as in @Morris_2010], then make a note of this in the **CensusTypeObs** field.
 
 ### Examples
 - `r citet("10.1007/s00442-011-2070-5")` [, p. 100] describe their model as "a female-based, pre-breeding matrix projection model," describe their first age class as "1 year old individuals," and include in the fertility term of the matrix $\phi_{juv}$, juvenile survival, which is distinct from the parent's survival (in the second row of the matrix) given by $\phi_{ad}$. Thus, using all three criteria, the model would be classified as `Pre`.
