--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -28,15 +28,13 @@ numbersections: true
 ---
 
 # Introduction 
-The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016]. MPMs are a convenient way to synthesize demographic information about a population, and are useful in addressing ecological, evolutionary, and management questions [@Caswell2001a; @Morris2002a].
+The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016]. MPMs are a convenient way to synthesize demographic information about a population, and are useful in addressing ecological, evolutionary, and management questions [@Caswell2001a; @Morris2002a]. Most early MPMs were developed by collaborations between biologists with expertise on the species at hand and modelers with deep understanding of the subtleties of modeling. MPMs now, having been long promoted as a straightforward translation of life-history information into quantitative analysis, are often being created by biologists who are primarily empirical ecologists or conservation biologists, and may have had little training in modeling beyond a graduate course in population ecology. One might then ask, do these MPMs reliably reproduce the life histories they are meant to represent? 
 
-It is important to remember that MPMs are approximations, both because they still abstract away much biological detail and because demographic measurements are imprecise. 
+It is important to remember that MPMs are approximations, both because they still abstract away much biological detail and because demographic measurements are imprecise. There are a variety of subtleties in constructing such models, especially when breeding is spread across a substantial fraction of the year or when there is substantial heterogeneity among individuals within an age or stage class; much theoretical work has gone into making MPMs more complex to account for this, and we are starting to better understand the effects of these phenomena on simple models [e.g., @Fujiwara2017]. But even setting aside these issues, we might hope that, if we assume that a simple life history description (e.g., as embodied in an age- or stage-structured life table) is a useful description of the population, then the constructed MPM should accurately reproduce that description. If it does not, then we are introducing additional errors into the analysis above and beyond the inherent approximations of modeling.
 
-Nevertheless, one should always strive not to introduce additional inconsistencies between the model and reality, especially if those result in biased outputs.
+One of us (BEK) has spent two decades teaching MPMs to applied masters students. This experience has revealed several aspects of MPM construction that are particularly challenging to novices, and thus might be similarly challenging to biologists who do not regularly create mathematical models of their system. Furthermore, the students, when sent to find a published model to analyze, have uncovered a suprising number of published MPMs that have failed to meet these challenges. At one level, the errors made by these novices are "simply" accounting issues, but our interpretation is that the difficulty that students have in overcoming them is rooted in the contrast between the often-loose way that terms are used to describe biological populations and the very precise meanings of terms in MPMs (together with some genuine linguistic ambiguity that plagues the field).
 
-My experience teaching MPMs to applied masters students has revealed several aspects of MPM construction that are particularly challenging to novices, and frequent encounters with published MPMs that have failed to meet these challenges.
-
-My goal in this paper is to highlight these challenges, describe their impacts on the outputs of MPMs, and document their prevalence in the peer-reviewed literature.
+Our goal in this paper is to highlight these challenges (which are described in the next section), quantify their impacts on the outputs of MPMs, and document their prevalence in the peer-reviewed literature. We conclude with a discussion of why these MPM construction errors are so prevalent, and how we might improve future practice.
 
 # Challenges in MPM construction
 ## Ensuring that the fertility transition spans a full timestep
@@ -94,6 +92,8 @@ Revisiting prior results
 - Inidividual studies
 - Syntheses
 
+# Acknowledgments {.unnumbered}
+This work was supported by [funding support to the compadrinos], a UCSB Faculty Senate grant to BEK, and [funding support to Masami & Jasmin]. We thank Rob Salguero-Gomez for feedback on the model evaluation protocol, and XXX, YYY, and ZZZ for carrying out the model evaluations.
 
-References {#references .unnumbered}
-==========
+# References {#references .unnumbered}
+
