Opening of "Challenges"; fix Caswell citation

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -1,4 +1,4 @@
-@Book{Caswell2001a,
+@Book{Caswell2001,
 author = {Caswell, H. }, 
 title = {Matrix population models: Construction, analysis, and interpretation}, 
 volume = {}, 
@@ -27,7 +27,7 @@ keywords = {}}
 @Article{Salguero-Gomez2015,
 author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and de Kroon, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and V{\'e}lez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
 title = {{The {COMPADRE} Plant Matrix Database: an open online repository for plant demography}}, 
-journal = {J Ecol}, 
+journal = {J. Ecol.}, 
 volume = {103}, 
 issue = {}, 
 pages = {202-218}, 
