--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -28,7 +28,7 @@ numbersections: true
 ---
 
 # Introduction 
-The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016]. MPMs are a convenient way to synthesize demographic information about a population, and are useful in addressing ecological, evolutionary, and management questions [@Caswell2001a; @Morris2002a]. Most early MPMs were developed by collaborations between biologists with expertise on the species at hand and modelers with deep understanding of the subtleties of modeling. MPMs now, having been long promoted as a straightforward translation of life-history information into quantitative analysis, are often being created by biologists who are primarily empirical ecologists or conservation biologists, and may have had little training in modeling beyond a graduate course in population ecology. One might then ask, do these MPMs reliably reproduce the life histories they are meant to represent? 
+The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016]. MPMs are a convenient way to synthesize demographic information about a population, and are useful in addressing ecological, evolutionary, and management questions [@Caswell2001; @Morris2002a]. Most early MPMs were developed by collaborations between biologists with expertise on the species at hand and modelers with deep understanding of the subtleties of modeling. MPMs now, having been long promoted as a straightforward translation of life-history information into quantitative analysis, are often being created by biologists who are primarily empirical ecologists or conservation biologists, and may have had little training in modeling beyond a graduate course in population ecology. One might then ask, do these MPMs reliably reproduce the life histories they are meant to represent? 
 
 It is important to remember that MPMs are approximations, both because they still abstract away much biological detail and because demographic measurements are imprecise. There are a variety of subtleties in constructing such models, especially when breeding is spread across a substantial fraction of the year or when there is substantial heterogeneity among individuals within an age or stage class; much theoretical work has gone into making MPMs more complex to account for this, and we are starting to better understand the effects of these phenomena on simple models [e.g., @Fujiwara2017]. But even setting aside these issues, we might hope that, if we assume that a simple life history description (e.g., as embodied in an age- or stage-structured life table) is a useful description of the population, then the constructed MPM should accurately reproduce that description. If it does not, then we are introducing additional errors into the analysis above and beyond the inherent approximations of modeling.
 
@@ -37,6 +37,12 @@ One of us (BEK) has spent two decades teaching MPMs to applied masters students.
 Our goal in this paper is to highlight these challenges (which are described in the next section), quantify their impacts on the outputs of MPMs, and document their prevalence in the peer-reviewed literature. We conclude with a discussion of why these MPM construction errors are so prevalent, and how we might improve future practice.
 
 # Challenges in MPM construction
+Matrix population models operate in discrete time, and as such are most naturally suited to species whose reproduction is concentrated in a short breeding season [so-called "birth-pulse" populations; @Caswell2001 *[did Caswell coin this phrase?]*]. Many animals and plants satisify this assumption, and we will focus on this case in our analysis. However, much of the theoretical development of MPMs was motivated by human demography, in which reproduction occurs throughout the year ("birth-flow" populations). This requires a variety of mathematical approximations to suitably transform continuous-time processes into a discrete-time representation, and gives a different view of the identity of individuals in a particular age or stage class. We will not treat the former here, but the latter is relevant. 
+
+MPMs assume that the population at time $t$ is a snapshot at a particular "census date." The discretization of age into classes means that in a birth-flow population, the first age class represents all individuals between zero and one timestep old at time $t$, and thus we would describe it as "Age 0--1." In contrast, in a birth-pulse population, all individuals in an age class are (more-or-less) exactly the same age. If the census were taken immediately after the breeding season^[Defined as the season in which individuals are born, not the season during which their parents mate.] (a "post-breeding census"), the first age class would comprise newborn individuals, all of age zero, the second class would comprise individuals of age exactly one, etc.^[In principle, the census could occur at any time relative to the breeding season, and @Caswell2001 provides general formulas to account for this; but in practice the two cases described here encompass nearly all, if not all, published birth-pulse models.] In contrast, if the census were taken immediately before the breeding season (a "pre-breeding census"), the youngest age class would be made up of individuals all with age exactly one. But we often see birth-pulse models in which the age classes are given as a range---this is incorrect, and leads to ambiguity (does the class "Age 0--1" refer to newborns or to one-year-olds?) that can confuse the practitioner on how best to construct the model. This nomenclature problem likely has two sources. First, many texts introduce birth-flow models first [e.g., the very first figure in @Caswell2001, illustrating the notion of discrete age classes, shows the classes as ages 0--1, 1--2, etc.]. Second, in colloquial use, age-associated terms often span an age range: for example, in ungulates the term "yearling" refers to any individual between the ages of one and two. When that same term is applied to a class in a birth-pulse MPM, nontrivial cognitive effort is required to mentally redefine it (so that "Yearling" means age exactly one). 
+
+This nomenclatural ambiguity plays a role in all three of the "accounting errors" that follow.
+
 ## Ensuring that the fertility transition spans a full timestep
 
 
@@ -93,7 +99,7 @@ Revisiting prior results
 - Syntheses
 
 # Acknowledgments {.unnumbered}
-This work was supported by [funding support to the compadrinos], a UCSB Faculty Senate grant to BEK, and [funding support to Masami & Jasmin]. We thank Rob Salguero-Gomez for feedback on the model evaluation protocol, and XXX, YYY, and ZZZ for carrying out the model evaluations.
+This work was supported by [funding support to the compadrinos], a UCSB Faculty Senate grant to BEK, and [funding support to Masami & Jasmin]. We thank Rob Salguero-Gómez for feedback on the model evaluation protocol, and XXX, YYY, and ZZZ for carrying out the model evaluations.
 
 # References {#references .unnumbered}
 
